# spaceships

./: #_make#  CMakeLists.txt  README.md  README.txt  _build_and_run  _build_and_run.bat  _clean  _debug  _debug_make  _make  _quickload  _run  _run.bat  gitignore.txt  usefulldump.txt
dependencies/cat/include/cat/: AdvancedMath.h  AssetId.h  AssetType.h  Button.h  Camera.h  CameraData.h  CubemapObject.h  Entity.h  EntityHandle.h  Font.h  Game.h  Image.h  ImageData.h  InputSystem.h  Interactable.h  Keys.h  Letter.h  Logger.h  Matrix.h  Mesh.h  MeshData.h  ModelTexture.h  PublicAssetLoader.h  PublicRenderer.h  PublicTextureManager.h  Random.h  Renderable.h  Screen.h  Shader.h  Shading.h  TextData.h  TextObject.h  TextureType.h  TileMap.h  Transform.h  Transform2D.h  UITransform.h  Vector.h  cat.h
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
res/models/: asteroid1.mtl  spaceship.blend  spaceship.blend1  spaceship.mtl
res/shaders/: d3_fragment.glsl  debug_fragment.glsl  image_fragment.glsl  skybox_fragment.glsl
src/: AssetLoader.h  Camera.cpp  Camera.h  Collider.h  CubemapObject.cpp  CubemapObject.h  D2Object.cpp  D2Object.h  D3Object.cpp  D3Object.h  Game.cpp  Game.h  GlobalInclude.h  Glyph.h  GlyphCache.cpp  InputSystem.cpp  InputSystem.h  Letter.h  Logger.cpp  Logger.h  ModelObject.cpp  ModelObject.h  ObjectLoader.cpp  OpenGLResourceLibrary.cpp  OpenGLResourceLibrary.h  Renderable.cpp  Renderable.h  Shader.cpp  Shader.h  ShaderManaging.cpp  ShaderManaging.h  Spaceship.cpp  Spaceship.h  SpaceshipGame.cpp  SpaceshipGame.h  TextObject.cpp  TextObject.h  TextureManager.cpp  TextureManager.h  WorldObject.cpp  (+5 more)
src/components/: AsteroidData.cpp  AsteroidData.h  Collider.cpp  Collider.h  Collider2.h  Entity.h  ImageData.cpp  ImageData.h  MeshData.cpp  MeshData.h  ModelTexture.cpp  ModelTexture.h  Renderable.cpp  Renderable.h  Shading.cpp  Shading.h  SpaceshipData.cpp  SpaceshipData.h  TextData.cpp  TextData.h  Transform.cpp  Transform.h  UITransform.cpp  UITransform.h
src/enums/: GameState.h  ViewpointTypes.h
src/helpers/: AdvancedMath.cpp  AdvancedMath.h  AsteroidGenerator.cpp  AsteroidGenerator.h  Constantes.h  GLErrorHandling.cpp  GLErrorHandling.h  GLerrorHandling.cpp  GameData.cpp  GameData.h  GameUpdate.cpp  GlobalInclude.h  Keybinds.cpp  Matrix.cpp  Matrix.h  ObjectInit.cpp  Random.cpp  Random.h  Vector.cpp  Vector.h  advancedMath.cpp  advancedMath.h  glFunctions.cpp  glFunctions.h
src/managers/: AssetLoader.cpp  GlyphCache.cpp  GlyphCache.h  InputSystem.cpp  InputSystem.h  ObjectLoader.cpp  ObjectLoader.h  OpenGLResourceLibrary.cpp  OpenGLResourceLibrary.h  PhysicsSystem.cpp  PhysicsSystem.h  Renderer.cpp  Renderer.h  ShaderManaging.cpp  ShaderManaging.h  TextureManager.cpp  TextureManager.h
src/norends/: Camera.cpp  Camera.h  DebugDraw.cpp  DebugDraw.h
src/objects/: Asteroid.cpp  Asteroid.h  CubemapObject.cpp  CubemapObject.h  D2Object.cpp  D2Object.h  D3Object.cpp  D3Object.h  Image.cpp  Image.h  ModelObject.cpp  ModelObject.h  Renderable.cpp  Renderable.h  Spaceship.cpp  Spaceship.h  TextObject.cpp  TextObject.h  WorldObject.cpp  WorldObject.h
src/static/: Debugger.h  Logger.cpp  Logger.h
src/structures/: Collider.h  GameData.h  Glyph.h  Letter.h  PhysicsData.cpp  PhysicsData.h  PositionedCollider.cpp  PositionedCollider.h  Ray.cpp  Ray.h  Shader.cpp  TaggedTextureResource.h  TextureResource.h
usefull/: TODO.txt  _debug.bat  _debug_make.bat  _make.bat  dbug_data.txt  debug_vtx.csv  debug_vtx_dump.csv  debug_vtx_dump2.csv  debug_vtx_original.csv
